# esp-followme2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/ada_esp32_feather/: ada_esp32_feather.c  idf_component.yml
components/ada_esp32_feather/include/bsp/: tft-feather.h
components/dns_server/: dns_server.c
main/: CMakeLists.txt  Kconfig.projbuild  captive_portal.c  captive_portal.h  idf_component.yml  main.c  root.html
main/app/: app_sntp.c  app_wifi.c  app_wifi.h  file_manager.c  file_manager.h
main/gui/: ui_main.c  ui_main.h  ui_net_config.c  ui_net_config.h
main/gui/image/: icon_book.c  logo_jiong.c
main/gui/page/: page_home.c  page_home.h  page_led.c  page_led.h
main/http/: http.c  http.h
spiffs/: index.html
